# openai_sdk_wrapper

./: README.md  pyproject.toml  setup.py
openai_sdk_wrapper/: chat.py  completions.py  config.py  setup.py
